--- a/frontend/css/registro.css
+++ b/frontend/css/registro.css
@@ -73,7 +73,7 @@ h1 {
     -o-border-radius: 10px;
 }
 
-.login-container {
+.registro-container {
     position: relative;
     width: 400px;
     height: 600px;
@@ -81,7 +81,7 @@ h1 {
     margin-left: -650px; /* Ajustamos el margen derecho para dar espacio a la imagen */
     
 }
-.login-container form input {
+.registro-container form input {
     display: block;
     padding: 15px;
     width: 135%;
@@ -103,7 +103,7 @@ h1 {
     
 }
 
-.login-container form input:focus {
+.registro-container form input:focus {
     box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.2);
     animation: wobble 0.3s ease-in;
     -webkit-animation: wobble 0.3s ease-in;
