--- a/frontend/css/iniciosesion.css
+++ b/frontend/css/iniciosesion.css
@@ -94,7 +94,8 @@ h1 {
     -webkit-animation: wobble 0.3s ease-in;
 }
 .buttonlogin input{
-    background-color: rgba(170, 110, 46, 0.356) !important;
+    background-color: rgba(170, 110, 46, 0.658) !important;
+    border: 1.5px solid rgb(0, 0, 0) !important;
 }
 .form-container {
     background-color: hsla(25, 36%, 48%, 0.603);
