--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -28,7 +28,57 @@ body {
 .layout_padding-bottom {
   padding-bottom: 90px;
 }
+.welcom_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 
+.welcom_container h2 {
+  /* font-family: "SnellBT Regular", sans-serif; */
+  /*centrar div*/
+  margin: 10px !important;
+  font-weight: bold !important;
+  font-size: 2.5rem !important;
+  display: flex !important;
+  justify-content: center !important;
+}
+.welcom_container p {
+  /* font-family: "SnellBT Regular", sans-serif !important; */
+  /*centrar div*/
+  margin: 0 20px 0 20px !important;
+  font-size: 1.0rem !important;
+  display: flex !important;
+  justify-content: center !important;
+}
+.masinfo{
+  display: flex;
+  justify-content: center;
+  background-color: red;
+  color: blue;
+  margin-bottom: 5px;
+
+}
+.buttom-other-style{
+  margin-left: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
 .heading_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,11 +94,9 @@ body {
 
 .heading_container h2 {
   /* font-family: "SnellBT Regular", sans-serif; */
-  /*centrar div*/
+  position: relative;
   font-weight: bold;
   font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
 }
 
 @font-face {
@@ -674,11 +722,12 @@ a:focus {
 
 .client_section .client_container .box .img-box {
   position: relative;
-  width: 300px;
-  min-width: 300px;
+  width: 175px;
+  min-width: 175px;
   padding: 0 0 20px 20px;
-  margin-right: 115px;
+  margin-right: 25px;
 }
+
 
 .client_section .client_container .box .img-box img {
   position: relative;
