--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -691,16 +691,16 @@ a:focus {
   width: 65px;
 }
 
-.client_section .heading_container {
+.client_section .client_section2 .heading_container {
   margin-bottom: 45px;
   padding-left: 30%;
 }
 
-.client_section .img-box img {
+.client_section .client_section2 .img-box img {
   width: 100%;
 }
 
-.client_section .client_container {
+.client_section .client_section2 .client_container {
   background-color: red;
   /* background-image: url(../images/client-bg.png); */
   background-size: 90% 100%;
@@ -710,7 +710,7 @@ a:focus {
   padding: 75px 0 175px 0;
 }
 
-.client_section .client_container .box {
+.client_section .client_section2 .client_container .box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -720,7 +720,7 @@ a:focus {
   padding: 0 150px 0 15px;
 }
 
-.client_section .client_container .box .img-box {
+.client_section .client_section2 .client_container .box .img-box {
   position: relative;
   width: 175px;
   min-width: 175px;
@@ -729,12 +729,12 @@ a:focus {
 }
 
 
-.client_section .client_container .box .img-box img {
+.client_section .client_section2 .client_container .box .img-box img {
   position: relative;
   z-index: 3;
 }
 
-.client_section .client_container .box .img-box:before {
+.client_section .client_section2 .client_container .box .img-box:before {
   content: "";
   position: absolute;
   left: 0;
@@ -746,30 +746,30 @@ a:focus {
           box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.1);
 }
 
-.client_section .client_container .box .detail-box {
+.client_section .client_section2 .client_container .box .detail-box {
   margin-top: 45px;
 }
 
-.client_section .client_container .box .detail-box h4 {
+.client_section .client_section2 .client_container .box .detail-box h4 {
   font-weight: 600;
 }
 
-.client_section .client_container .box .detail-box p {
+.client_section .client_section2 .client_container .box .detail-box p {
   margin-top: 10px;
   margin-bottom: 25px;
 }
 
-.client_section .client_container .box .detail-box i {
+.client_section .client_section2 .client_container .box .detail-box i {
   font-size: 24px;
 }
 
-.client_section .carousel-indicators {
+.client_section .client_section2 .carousel-indicators {
   position: unset;
   margin: 0;
   margin-top: 45px;
 }
 
-.client_section .carousel-indicators li {
+.client_section .client_section2 .carousel-indicators li {
   width: 20px;
   height: 20px;
   border-radius: 100%;
@@ -777,11 +777,11 @@ a:focus {
   opacity: 1;
 }
 
-.client_section .carousel-indicators li.active {
+.client_section .client_section2 .carousel-indicators li.active {
   background-color: #a04120;
 }
 
-.client_section .carousel_btn-box {
+.client_section .client_section2 .carousel_btn-box {
   position: absolute;
   top: 45%;
   right: 0;
@@ -797,8 +797,8 @@ a:focus {
   z-index: 3;
 }
 
-.client_section .carousel_btn-box .carousel-control-prev,
-.client_section .carousel_btn-box .carousel-control-next {
+.client_section .client_section2 .carousel_btn-box .carousel-control-prev,
+.client_section .client_section2 .carousel_btn-box .carousel-control-next {
   position: unset;
   width: 55px;
   height: 55px;
@@ -809,8 +809,8 @@ a:focus {
   margin: 2.5px 0;
 }
 
-.client_section .carousel_btn-box .carousel-control-prev:hover,
-.client_section .carousel_btn-box .carousel-control-next:hover {
+.client_section .client_section2 .carousel_btn-box .carousel-control-prev:hover,
+.client_section .client_section2 .carousel_btn-box .carousel-control-next:hover {
   color: #46200b;
 }
 
