--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -137,7 +137,7 @@ a:focus {
 
 /*header section*/
 .hero_area {
-  height: calc(100vh - 45px);
+  height: calc(70vh - 45px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -323,7 +323,7 @@ a:focus {
   top: 0;
   left: 0;
   width: 75%;
-  height: 100%;
+  height: 50%;
   background-color: blue;
   /* background-image: url(../images/slider-bg1.png); */
   background-size: 100% 100%;
@@ -335,8 +335,8 @@ a:focus {
   position: absolute;
   top: 25px;
   right: 45px;
-  width: 550px;
-  height: 550px;
+  width: 225px;
+  height: 225px;
   background-color: purple;
   /* background-image: url(../images/slider-bg2.png); */
   background-size: cover;
@@ -350,14 +350,14 @@ a:focus {
 
 .slider_section .detail_box h1 {
   color: black;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   margin-bottom: 30px;
   /* font-family: "SnellBT Regular", sans-serif; */
 }
 
 .slider_section .detail_box h1 span {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 .slider_section .detail_box a {
@@ -383,7 +383,8 @@ a:focus {
 }
 
 .slider_section .img-box img {
-  width: 100%;
+  width: 50%;
+  margin-bottom: 70%;
 }
 
 .slider_section #customCarousel1 {
@@ -394,7 +395,7 @@ a:focus {
 
 .slider_section .carousel_btn-box {
   position: absolute;
-  top: 45%;
+  top: 20%;
   left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -411,8 +412,8 @@ a:focus {
 .slider_section .carousel_btn-box .carousel-control-prev,
 .slider_section .carousel_btn-box .carousel-control-next {
   position: unset;
-  width: 55px;
-  height: 55px;
+  width: 35px;
+  height: 35px;
   font-size: 12px;
   background-color: #ffffff;
   opacity: 1;
@@ -701,7 +702,7 @@ a:focus {
 }
 
 .client_section .client_section2 .client_container {
-  background-color: red;
+  background-color: rgb(255, 0, 0);
   /* background-image: url(../images/client-bg.png); */
   background-size: 90% 100%;
   background-position: bottom right;
@@ -744,6 +745,9 @@ a:focus {
   background-color: #ffffff;
   -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.1);
+}
+.detail_box{
+  margin-bottom: 50% !important;
 }
 
 .client_section .client_section2 .client_container .box .detail-box {
