--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -142,7 +142,7 @@ a:focus {
 
 /*header section*/
 .hero_area {
-  height: calc(50vh - 45px);
+  height: calc(52vh - 45px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -455,144 +455,6 @@ a:focus {
   margin-bottom: 25px;
 }
 
-.chocolate_section .chocolate_container {
-  padding-bottom: 75px;
-}
-
-.chocolate_section .box {
-  text-align: center;
-  margin: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 1px solid #6c6c6c;
-  padding-top: 25px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.chocolate_section .box .img-box {
-  width: 200px;
-  height: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.chocolate_section .box .img-box img {
-  width: 100%;
-  height: auto;
-}
-
-.chocolate_section .box .detail-box {
-  width: 100%;
-  background-color: #46200b;
-  color: #ffffff;
-  padding: 15px;
-  margin-top: 10px;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.chocolate_section .box .detail-box h6 {
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.chocolate_section .box .detail-box h6 span {
-  color: #cb4e08;
-}
-
-.chocolate_section .box .detail-box h5 {
-  font-weight: 600;
-}
-
-.chocolate_section .box .detail-box a {
-  color: #ffffff;
-  font-size: 14px;
-}
-
-.chocolate_section .box:hover {
-  border-color: transparent;
-  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-}
-
-.chocolate_section .box:hover .detail-box {
-  visibility: visible;
-  opacity: 1;
-}
-
-.chocolate_section .slick-prev,
-.chocolate_section .slick-next {
-  width: 55px;
-  height: 55px;
-  background-color: #ffffff;
-  color: #a04120;
-  top: initial;
-  bottom: 0px;
-  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
-}
-
-.chocolate_section .slick-prev:hover,
-.chocolate_section .slick-next:hover {
-  background-color: #46200b;
-}
-
-.chocolate_section .slick-prev:hover:before,
-.chocolate_section .slick-next:hover:before {
-  color: #ffffff;
-}
-
-.chocolate_section .slick-prev {
-  left: calc(50% - 35px);
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
-.chocolate_section .slick-next {
-  right: calc(50% - 35px);
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
-}
-
-.chocolate_section .slick-prev:before,
-.chocolate_section .slick-next:before {
-  /* font-family: "FontAwesome"; */
-  position: relative;
-  z-index: 2;
-  color: #a04120;
-  font-size: 14px;
-  opacity: 1;
-}
-
-.chocolate_section .slick-prev:before {
-  content: "\f060";
-}
-
-.chocolate_section .slick-next:before {
-  content: "\f061";
-}
-
-.offer_section {
-  /* font-family: "SnellBT Regular", sans-serif; */
-}
 
 .offer_section .box {
   display: -webkit-box;
@@ -908,56 +770,6 @@ a:focus {
           align-items: flex-end;
 }
 
-.info_section .info_form form input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  background-color: #ffffff;
-  height: 50px;
-  padding-left: 15px;
-  outline: none;
-  color: #ffffff;
-  border: none;
-  border-bottom: 1px solid #46200b;
-}
-
-.info_section .info_form form input::-webkit-input-placeholder {
-  color: #9c9c9c;
-}
-
-.info_section .info_form form input:-ms-input-placeholder {
-  color: #9c9c9c;
-}
-
-.info_section .info_form form input::-ms-input-placeholder {
-  color: #9c9c9c;
-}
-
-.info_section .info_form form input::placeholder {
-  color: #9c9c9c;
-}
-
-.info_section .info_form form button {
-  background-color: transparent;
-  color: #46200b;
-  text-transform: uppercase;
-  font-size: 12px;
-  outline: none;
-  border: none;
-  display: inline-block;
-  padding: 15.5px 25px;
-  background-color: #a04120;
-  color: #ffffff;
-  border-radius: 0;
-  border: 1px solid #a04120;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.info_section .info_form form button:hover {
-  background-color: transparent;
-  color: #a04120;
-}
 
 .info_section .social_box {
   width: 100%;
@@ -966,26 +778,11 @@ a:focus {
   display: flex;
 }
 
-.info_section .social_box a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 65px;
-  height: 65px;
-  border: 1px solid #ffffff;
-  color: #ffffff;
-  margin-right: 10px;
-}
 
 .info_section h4 {
   /* font-family: "SnellBT Regular", sans-serif; */
   margin-bottom: 15px;
+  margin-left: 100px;
 }
 
 .info_section .info_links .info_links_menu {
@@ -996,6 +793,7 @@ a:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+          margin-left: 100px;
 }
 
 .info_section .info_links .info_links_menu a {
