--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -29,56 +29,47 @@ body {
   padding-bottom: 90px;
 }
 .welcom_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .welcom_container h2 {
-  /* font-family: "SnellBT Regular", sans-serif; */
-  /*centrar div*/
-  margin: 10px !important;
+  margin: 10px 20px !important;
   font-weight: bold !important;
   font-size: 2.5rem !important;
-  display: flex !important;
-  justify-content: center !important;
 }
-.welcom_container p {
-  /* font-family: "SnellBT Regular", sans-serif !important; */
-  /*centrar div*/
-  margin: 0 20px 0 20px !important;
-  font-size: 1.0rem !important;
-  display: flex !important;
-  justify-content: center !important;
-}
-.masinfo{
+
+.content_container {
   display: flex;
-  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  margin: 10px 20px;
+}
+
+.content_container p {
+  font-size: 1rem !important;
+  width: 60%;
+}
+
+.buttom-other-style {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 20px;
+  width: 20%;
+  height: 20%;
+
+}
+
+.masinfo {
   background-color: red;
   color: blue;
   margin-bottom: 5px;
+}
 
-}
-.buttom-other-style{
-  margin-left: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
+
 .heading_container {
   display: -webkit-box;
   display: -ms-flexbox;
