--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -48,7 +48,7 @@ body {
 }
 
 .content_container p {
-  font-size: 1rem !important;
+  font-size: 22px !important;
   width: 60%;
 }
 
@@ -57,10 +57,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 20px;
   width: 20%;
   height: 20%;
-
+  margin-left: 111px;
+  padding: 6px;
 }
 
 .masinfo {
@@ -95,17 +95,6 @@ body {
   margin-left: 25px;
 }
 
-@font-face {
-  /* font-family: "SnellBT Regular"; */
-  src: url(../fonts/SnellBT-Regular.otf);
-  font-weight: 500;
-}
-
-@font-face {
-  /* font-family: "SnellBT Bold"; */
-  src: url(../fonts/SnellBT-Bold.otf);
-  font-weight: 700;
-}
 
 a,
 a:hover,
@@ -133,7 +122,7 @@ a:focus {
 
 /*header section*/
 .hero_area {
-  height: calc(52vh - 45px);
+  height: calc(45vh - 45px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -438,13 +427,7 @@ a:focus {
   width: 100%;
 }
 
-.chocolate_section .heading_container {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  margin-bottom: 25px;
-}
+
 
 
 .offer_section .box {
@@ -538,11 +521,10 @@ a:focus {
 
 .client_section {
   margin-top: 40px !important;
-  
+  font-size: larger;
 }
 
 .client_section .heading_container {
-  margin-bottom: 45px;
   padding-left: 30%;
 }
 
@@ -561,6 +543,8 @@ a:focus {
   backdrop-filter: blur(20px);
     border: 1px solid hsla(0, 0%, 65%, 0.158);
     box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.2);
+  height: 480px;  
+  font-size: larger;
 }
 
 .client_section .client_container .box {
@@ -669,6 +653,7 @@ a:focus {
 .client_section .carousel_btn-box .carousel-control-next:hover {
   color: #46200b;
 }
+
 
 .contact_section {
   position: relative;
