--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -57,20 +57,45 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 20%;
   height: 20%;
-  margin-left: 111px;
+  margin-left: 105px;
   padding: 6px;
+}
+
+.buttom-header-style{
+  display: flex;
+  flex-direction: row !important;
+  width: 20%;
+  height: 20%;
+  padding: 6px;
+}
+
+.buttom-other-style h3{
+  margin-bottom: 0;
 }
 
 
 .masinfo {
   margin: 5px;
-  padding: 10px;
+  padding: 5px;
   background-color: #4CAF50;
   color: white;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.auth-buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+  z-index: 9000;
 }
 
 .masinfo:hover {
@@ -362,7 +387,8 @@ a:focus {
 
 .slider_section .img-box img {
   width: 50%;
-  margin-bottom: 70%;
+  margin-bottom: 195px;
+  z-index: -200;
 }
 
 .slider_section #customCarousel1 {
