--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -53,7 +53,8 @@ body {
 }
 
 .buttom-other-style {
-  background-color: red;
+  border-radius: 10px;
+  background-color: #a294bbae;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,7 +81,7 @@ body {
 .masinfo {
   margin: 5px;
   padding: 5px;
-  background-color: #4CAF50;
+  background-color: #de4f08;
   color: white;
   border: none;
   cursor: pointer;
@@ -341,7 +342,7 @@ a:focus {
   left: 0;
   width: 100%;
   height: 50%;
-  background-color: blue;
+  background-color:  rgb(111, 117, 234);
   /* background-image: url(../images/slider-bg1.png); */
   background-size: 100% 100%;
   z-index: 2;
@@ -566,7 +567,7 @@ a:focus {
 }
 
 .client_section .client_container {
-  background-color: rgba(255, 170, 0, 0.416);
+  background-color: #cd8731;
   /* background-image: url(../images/client-bg.png); */
   background-size: 90% 100%;
   background-position: bottom right;
